src/components/ShoppingCartItems/shoppingCartItems.module.css
.container {
  --footer-height: 80px;
  --max-width: 760px;
  margin: 0 auto;

  /* add bottom gap to make shoppingCartItem visible */
  padding: var(--gap-edge) var(--gap-edge) calc(var(--footer-height) + 20px);
  max-width: var(--max-width);

  /* prevent animation trigger scroll bar on x-axis */
  overflow-x: hidden;
}

.title {
  margin-bottom: 12px;
  font-size: 24px;
}

.cartList {
  padding-left: 0px;
  list-style: none;
}

.empty {
  margin: var(--gap-edge);
  padding: 8px;
  height: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: rgb(247, 231, 237);
  border-radius: var(--radius);
}

.empty > p {
  margin-bottom: 16px;
  font-size: 18px;
  color: hsl(230, 19%, 37%);
}

.empty > button {
  padding: .65em 1.25em;
  background: var(--color-primary);
  border: none;
  color: white;
  border-radius: var(--radius);
  cursor: pointer;
  transition: background-color 200ms ease;
}

.empty > button:hover {
  background: var(--color-primary-2);
}

.ctaWrapper {
  width: 100%;
  height: var(--footer-height); /* inherit from .container */
  background: white;
  position: fixed;
  bottom: 0;
  left: 0;
  isolation: isolate;
  display: flex;
  align-items: center;
  box-shadow: 0px -2px 6px -2px hsl(245, 14%, 18%, 0.1);
}

.cta {
  padding: var(--gap-edge);
  margin: 0 auto;
  max-width: var(--max-width);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.price {
  font-size: 16px;
  line-height: 1.2;
  color: hsl(225, 11.22%, 19.96%);
}

.total {
  font-size: 20px;
}

.fee {
  font-size: 12px;
  /* color: hsl(0, 100%, 50%); */
  color: hsl(218, 16%, 29%);
}

.cta > button {
  padding: .75em 1.25em;
  background: var(--color-primary);
  border: none;
  color: white;
  border-radius: var(--radius);
  cursor: pointer;
  transition: backgorund-color 200ms ease;
}

.cta > button:hover {
  background: var(--color-primary-2);
}

.count {
  display: inline-block;
  min-width: 1em;
}

